Upgrade to Spring Boot 4 with Jackson 2